--- a/dol.html
+++ b/dol.html
@@ -236,7 +236,7 @@ body {
 	</div>
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?signed_in=true"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAa-BYhAdzCi8oZSDp8ZAmn6bh1cy5NIUA"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
 	<script>
 	var latlng = "35.182161, 128.563744"; //구글맵에서 위치 검색 후, 맵을 클릭하면 나오는 하단의 좌표를 입력한다.
