--- a/dol.html
+++ b/dol.html
@@ -11,7 +11,7 @@
 <meta property="og:image" content="https://cloud.githubusercontent.com/assets/16554116/12774533/375b55dc-ca89-11e5-9829-e5984d1d2efa.jpg" />
 <meta property="og:image" content="https://cloud.githubusercontent.com/assets/16554116/12774535/375cf090-ca89-11e5-8589-c69d0f62defb.jpg" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="rmsidtest.github.io" />
+<meta property="og:url" content="skydream81.github.io/dol.html" />
 
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"/>
 <style>
