--- a/dol.html
+++ b/dol.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=yes" />
 
-<meta property="og:site_name" content="babyparty" />
+<meta property="og:site_name" content="babyparty1" />
 <meta property="og:title" content="우리 아이 생일을 축하해 주세요." />
 <meta property="og:description" content="2017년 7월 16일 오후 12시, 부페파크에서 우리 아이 생일을 축하해주세요~" />
 <meta property="og:image" content="http://drive.google.com/uc?export=view&id=0B7rSEm3Cv3gdMzU0RllUaGhCdEE" />
