--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>초대합니다 :-)</title>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=yes" />
 
 <meta property="og:site_name" content="babyparty" />
 <meta property="og:title" content="우리 아이 생일을 축하해 주세요." />
@@ -277,7 +277,7 @@ body {
 		  	variableWidth: true
 		});
 		targetEle.css({"display" : "block"});
-		var tmpHeight = 0;
+		var tmpHeight = 10;
 		targetEle.find("img").each(function(k, v) {
 			var _this = $(this);
 			if( tmpHeight == 0 || tmpHeight > _this.height() ) {
