--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>초대합니다 :-)</title>
@@ -284,8 +284,7 @@ body {
 				tmpHeight = _this.height();
 			}
 		});
-		$(".slide_wrap").height(tmpHeight);
-		$(".slide_wrap").height(100);
+		$(".slide_wrap").height(50);
 	});
 	
 	</script>
