--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ body {
 		</div>
 		<div class="content_wrap">
 			<h1><img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" />우리 아가의 돌잔치에 초대합니다<img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" /></h1>
-			항상 저희를 아껴주시고, 응원해 주시는 분들께<br />
+			항상 저희를 아껴 주시고, 응원해 주시는 분들께<br />
 			감사의 말씀을 드립니다.<br />
 			소중한 분들께 조금이나마 보답하고자,<br />
 			우리 아가의 첫번째 돌잔치에 초대장을 보내드립니다.<br />
@@ -284,7 +284,7 @@ body {
 				tmpHeight = _this.height();
 			}
 		});
-		$(".slide_wrap").height(50);
+		$(".slide_wrap").height(auto);
 	});
 	
 	</script>
