--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
 	margin: 0 auto;
 	background-color: #fff;
 	height: auto;
-	font-family: sans-serif, dotum, gulim, arial, helvetica;
+	font-family: dotum, gulim, arial, helvetica, sans-serif;
 }
 
 .img100 {
