--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
 	max-width: 100%;
 	width: auto !important;
 	width: 100%;
-	height: 1000px;
+	height: auto;
 }
 
 #autoplay, .slide_wrap {
