--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ body {
 		initMap();
 
 		var targetEle = $("#autoplay");
-		targetEle.find("img").css("cssText" , "width:" + targetEle.width() + "px !important;");
+		//targetEle.find("img").css("cssText" , "width:" + targetEle.width() + "px !important;");
 		targetEle.slick({
 			slidesToShow : 1,
 			slidesToScroll : 1,
