--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@ body {
 	<div id="wrap">
 		<div class="slide_wrap">
 			<div id="autoplay" style="display:none;">
+				<div class="cycle-pager"></div>
 				<!-- //이미지 추가 -->
 				<img src="http://drive.google.com/uc?export=view&id=0B7rSEm3Cv3gdS2FxWkxFZXJwUUU" class="img100" />
 				<img src="http://drive.google.com/uc?export=view&id=0B7rSEm3Cv3gdRklXMTdQaEpNQnM" class="img100" />
