--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ body {
 		targetEle.slick({
 			slidesToShow : 1,
 			slidesToScroll : 1,
-			autoplay : false,
+			autoplay : true,
 			autoplaySpeed : 2500,
 			dots: false,
 		  	infinite: true,
