--- a/index.html
+++ b/index.html
@@ -280,7 +280,8 @@ body {
 			autoplaySpeed : 2500,
 			dots: false,
 		  	infinite: true,
-		  	variableWidth: true
+		  	variableWidth: true,
+			adaptiveHeight: true
 		});
 		targetEle.css({"display" : "block"});
 		var tmpHeight = 0;
