--- a/index.html
+++ b/index.html
@@ -280,8 +280,7 @@ body {
 			autoplaySpeed : 2000,
 			dots: false,
 		  	infinite: true,
-		  	variableWidth: true,
-			adaptiveHeight: true
+		  	variableWidth: true
 		});
 		targetEle.css({"display" : "block"});
 		var tmpHeight = 0;
