--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <meta property="og:site_name" content="babyparty" />
 <meta property="og:title" content="하운이 생일을 축하해 주세요." />
-<meta property="og:description" content="2017년 7월 16일 오후 12시, 부페파크에서 하운이의 생일을 축하해주세요~" />
+<meta property="og:description" content="2017년 7월 16일(일요일) 낮 12시, 부페파크에서 하운이의 생일을 축하해주세요~" />
 <meta property="og:image" content="http://drive.google.com/uc?export=view&id=0B7rSEm3Cv3gdOGl5eXpZVlZfcUU" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="skydream81.github.io" />
@@ -214,7 +214,7 @@ body {
 			<a href="mailto:skyload81@gmail.com" class="bg3"><img src="https://cdn4.iconfinder.com/data/icons/miu/24/common-email-envelope-mail-outline-stroke-128.png" alt="email" />이메일</a>
 		</div>
 		<div class="date_wrap">
-			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />초대일시 : <strong>2017년 07월 16일 오후 12시</strong></span>
+			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />초대일시 : <strong>2017년 07월 16일(일요일) 낮 12시</strong></span>
 		</div>
 		<div class="addr_wrap">
 			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" />초대장소 : <strong>부페파크 웨딩유로</strong> | 경남 창원시 마산합포구 해운동 68 9층</span>
