--- a/paybook.html
+++ b/paybook.html
@@ -10,6 +10,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!-- bootstrap CSS -->
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+	<script lang="javascript" src="xlsx.full.min.js"></script>
 </head> 
 <body onload="onload()"> 
     <h1>1. 지출내역 등록</h1> 
@@ -79,9 +80,11 @@
 	<br><br>
 	<br><br>	
 	<h1>4. 일괄작업</h1> 
-	<button type="button" onclick="download()">다운로드</button>&nbsp;&nbsp;
-	<button type="button" onclick="upload()">업로드</button>&nbsp;&nbsp;
-	<button type="button" onclick="alldel()">일괄삭제</button>
+	<!--<button type="button" onclick="download()">다운로드</button>&nbsp;&nbsp;
+	<button type="button" onclick="upload()">업로드</button>&nbsp;&nbsp;-->
+	<button type="button" onclick="allExcelDown()">엑셀다운로드</button>
+	<button type="button" onclick="alldel()">일괄삭제</button>&nbsp;&nbsp;
+	
 	<script src="script.js"></script> 
 </body> 
 </html> 
